--- a/Views/Applications/Index.cshtml
+++ b/Views/Applications/Index.cshtml
@@ -8,6 +8,10 @@
     var sortedApplications = Model.OrderBy(a => a.Id);
 }
 
+@{
+    var user = Context.User; 
+    bool showButtons = user.IsInRole("1");
+}
 
 <form class="form-inline d-flex flex-row justify-content-start">
     <input class="form-control mr-sm-2" type="search" placeholder="Поиск" aria-label="Поиск">
