--- a/Views/Account/Login.cshtml
+++ b/Views/Account/Login.cshtml
@@ -26,10 +26,10 @@
                 <h3 class="text-center mb-4">Авторизация</h3>
                 <form method="post">
                     <div class="form-group">
-                        <input name="username" class="form-control" placeholder="Введите логин">
+                        <input name="username" class="form-control" placeholder="Введите логин" required>
                     </div>
                     <div class="form-group">
-                        <input name="password" type="password" class="form-control" placeholder="Введите пароль">
+                        <input name="password" type="password" class="form-control" placeholder="Введите пароль" required>
                     </div>
                     <button type="submit" class="btn btn-primary bg-accent">Войти</button>
                 </form>
