--- a/Views/Applications/Create.cshtml
+++ b/Views/Applications/Create.cshtml
@@ -19,6 +19,16 @@
                 <span asp-validation-for="NameEquipment" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="Number" class="control-label">Серийный номер</label>
+                <input asp-for="Number" class="form-control" />
+                <span asp-validation-for="Number" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Cost" class="control-label">Цена</label>
+                <input asp-for="Cost" class="form-control" />
+                <span asp-validation-for="Cost" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="EquipmentTypeId" class="control-label">Тип оборудования</label>
                 <select asp-for="EquipmentTypeId" class="form-control" asp-items="ViewBag.EquipmentTypeId"></select>
             </div>
@@ -27,9 +37,8 @@
                 <select asp-for="ProblemTypeId" class="form-control" asp-items="ViewBag.ProblemTypeId"></select>
             </div>
             <div class="form-group">
-                <label asp-for="Comment" class="control-label"></label>
-                <input asp-for="Comment" class="form-control" />
-                <span asp-validation-for="Comment" class="text-danger"></span>
+                <label asp-for="UserId" class="control-label">Исполнитель</label>
+                <select asp-for="UserId" class="form-control" asp-items="ViewBag.UserId"></select>
             </div>
             <div class="form-group">
                 <label asp-for="StatusId" class="control-label">Статус</label>
@@ -40,18 +49,6 @@
                 <input asp-for="ClientName" class="form-control" />
                 <span asp-validation-for="ClientName" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="Cost" class="control-label">Цена</label>
-                <input asp-for="Cost" class="form-control" />
-                <span asp-validation-for="Cost" class="text-danger"></span>
-            </div>
-            
-            <div class="form-group">
-                <label asp-for="UserId" class="control-label">Исполнитель</label>
-                <select asp-for="UserId" class="form-control" asp-items="ViewBag.UserId"></select>
-            </div>
-            
-            
             <div class="form-group">
                 <label asp-for="Description" class="control-label">Описание</label>
                 <input asp-for="Description" class="form-control" />
