--- a/Views/Applications/Edit.cshtml
+++ b/Views/Applications/Edit.cshtml
@@ -4,6 +4,11 @@
     ViewData["Title"] = "Edit";
 }
 
+@{
+    var user = Context.User;
+    bool show = user.IsInRole("1");
+}
+
 <div class="row justify-content-center">
     <h1 class="col-md-6">Изменение заявки</h1>
 </div>
@@ -13,38 +18,61 @@
         <form asp-action="Edit" class="mt-3 border p-3">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
-            <div class="form-group">
+            @* <div class="form-group">
                 <label asp-for="NameEquipment" class="control-label">Название оборудования</label>
                 <input asp-for="NameEquipment" class="form-control" />
                 <span asp-validation-for="NameEquipment" class="text-danger"></span>
-            </div>
-            <div class="form-group">
+            </div> *@
+            @* <div class="form-group">
                 <label asp-for="EquipmentTypeId" class="control-label">Тип оборудования</label>
                 <select asp-for="EquipmentTypeId" class="form-control" asp-items="ViewBag.EquipmentTypeId"></select>
             </div>
             <div class="form-group">
                 <label asp-for="ProblemTypeId" class="control-label">Тип проблемы</label>
                 <select asp-for="ProblemTypeId" class="form-control" asp-items="ViewBag.ProblemTypeId"></select>
+            </div> *@
+            <div class="form-group">
+                <label asp-for="Description" class="control-label">Описание</label>
+                <input asp-for="Description" class="form-control" />
+                <span asp-validation-for="Description" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Comment" class="control-label"></label>
+                <label asp-for="Comment" class="control-label">Комментарий</label>
                 <input asp-for="Comment" class="form-control" />
                 <span asp-validation-for="Comment" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="StatusId" class="control-label">Статус</label>
-                <select asp-for="StatusId" class="form-control" asp-items="ViewBag.StatusId"></select>
-            </div>
-            <div class="form-group">
+            @{
+                if (show)
+                {
+                    <div class="form-group">
+                        <label asp-for="StatusId" class="control-label">Статус</label>
+                        <select asp-for="StatusId" class="form-control" asp-items="ViewBag.StatusId"></select>
+                    </div>
+                }
+                else{
+                    <div class="form-group">
+                        <label asp-for="WorkStatus" class="control-label">Статус</label>
+                        <select asp-for="WorkStatus" class="form-control" asp-items="ViewBag.WorkStatuses"></select>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="TimeWork" class="control-label">Время работы</label>
+                        <input asp-for="TimeWork" type="time" class="form-control" value="10:05 AM" />
+                    </div>
+                }
+            }
+            
+            
+           
+            @* <div class="form-group">
                 <label asp-for="ClientName" class="control-label">Имя клиента</label>
                 <input asp-for="ClientName" class="form-control" />
                 <span asp-validation-for="ClientName" class="text-danger"></span>
-            </div>
-            <div class="form-group">
+            </div> *@
+            @* <div class="form-group">
                 <label asp-for="Cost" class="control-label">Цена</label>
                 <input asp-for="Cost" class="form-control" />
                 <span asp-validation-for="Cost" class="text-danger"></span>
-            </div>
+            </div> *@
 
             <div class="form-group">
                 <label asp-for="UserId" class="control-label">Исполнитель</label>
@@ -52,11 +80,7 @@
             </div>
 
 
-            <div class="form-group">
-                <label asp-for="Description" class="control-label">Описание</label>
-                <input asp-for="Description" class="form-control" />
-                <span asp-validation-for="Description" class="text-danger"></span>
-            </div>
+            
             <div class="form-group margin4">
                 <input type="submit" value="Изменить" class="btn btn-primary bg-accent" />
             </div>
