--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -43,7 +43,7 @@
                                     <a asp-action="Create"><button type="button" class="btn bg-accent margin1">Добавить заявку</button></a>
                                 </p>
                                 <p>
-                                    <a asp-action="Create"><button type="button" class="btn bg-accent margin1">Статистика</button></a>
+                                    <a asp-controller="Applications" asp-action="Statistic"><button type="button" class="btn bg-accent margin1">Статистика</button></a>
                                 </p>
                             }
                         </div>
