--- a/Views/Applications/Create.cshtml
+++ b/Views/Applications/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Demo.Data.Models.Application
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Создание";
 }
 <div class="row justify-content-center">
     <h1 class="col-md-6">Создание заявки</h1>
